--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Challenge 1</title>
 </head>
 <body>
-    <div class="container">
+
+    <div class="row container">
         <div class="logo">
             <img class="logoImg" src="assets/logo.svg" alt="">
             <h1 class="tittle">Encriptador de mensajes</h1>
@@ -29,6 +30,7 @@
             <button type="button" id="btn-desencriptar" onClick="desencriptar()">Desencriptar</button>
         </div>
     </div>
-    </div>
+    
+
 </body>
 </html>
